Made some small changes and organised a little

--- a/example.config.yml
+++ b/example.config.yml
@@ -1,4 +1,5 @@
 # Token Example: NzU4Mzg1STh3MgS5DHCsHsVY.X2uSag.71AkvJZaVe3R-s5Ay3GatchEdGe
 token: 'BOT_TOKEN'
+prefix: 'PREFIX'
 # Make sure the id(s) are seperated by commas (,)
 owners: ['OWNERS_ID(S)']
