--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "color-roles",
+  "name": "typescript-discord-bot-template",
   "version": "1.0.0",
-  "description": "Strip color based roles from users that aren't tier 3",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Floor-Gang/color-roles.git"
-  },
-  "author": "KingOKarma",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Floor-Gang/color-roles/issues"
-  },
-  "homepage": "https://github.com/Floor-Gang/color-roles#readme",
+  "description": "Template for a Typescript Discord Bot",
+  "main": "bot.ts",
   "dependencies": {
-    "@types/js-yaml": "^3.12.5",
     "discord.js": "^12.5.1",
-    "discord.js-commando": "github:discordjs/Commando",
-    "fs": "0.0.1-security",
+    "discord.js-commando": "^0.11.0-dev",
+    "fs": "^0.0.1-security",
     "js-yaml": "^3.14.1",
     "path": "^0.12.7",
     "tsc": "^1.20150623.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.14",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@types/js-yaml": "^3.12.5",
+    "@types/node": "^14.14.16",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node ./build/bot.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KingOKarma/typescript-discord-bot-template.git"
+  },
+  "author": "KingOKarma",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KingOKarma/typescript-discord-bot-template/issues"
+  },
+  "homepage": "https://github.com/KingOKarma/typescript-discord-bot-template#readme"
 }
